<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">

  <EditText
      android:id="@+id/edit_ime"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/menu_ime"
      android:inputType="textCapSentences" />

  <EditText
      android:id="@+id/edit_prezime"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/menu_prezime"
      android:inputType="textCapSentences" />

  <EditText
      android:id="@+id/edit_adresa"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/menu_adresa"
      android:inputType="textCapSentences" />

  <EditText
      android:id="@+id/edit_grad"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/menu_grad"
      android:inputType="textCapSentences" />

  <EditText
      android:id="@+id/edit_datum"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/menu_datum"
      android:inputType="textCapSentences" />

  <EditText
      android:id="@+id/edit_telefon"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/menu_telefon"
      android:inputType="textCapSentences" />

  <EditText
      android:id="@+id/edit_sokovi"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/menu_sokovi"
      android:inputType="textCapSentences" />

  <EditText
      android:id="@+id/edit_cena"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/menu_cena"
      android:inputType="textCapSentences" />

  <EditText
      android:id="@+id/edit_isporuceno"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/menu_isporuceno"
      android:inputType="textCapSentences" />

  <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ok"
      android:layout_marginLeft="110dp"/>
  <Button
      android:id="@+id/buttonReset"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/reset"
      android:layout_marginLeft="135dp"/>

 </LinearLayout>
</ScrollView>
