<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dodaj">

    <fragment
        android:id="@+id/nav_dodaj"
        android:name="com.example.dostava.ui.home.HomeFragment"
        android:label="@string/menu_dodaj"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_izbrisi"
        android:name="com.example.dostava.ui.izbrisi.IzbrisiFragment"
        android:label="@string/menu_izbrisi"
        tools:layout="@layout/izbrisi_fragment" />

    <fragment
        android:id="@+id/nav_pretrazi"
        android:name="com.example.dostava.ui.tools.ToolsFragment"
        android:label="@string/menu_pretrazi"
        tools:layout="@layout/fragment_tools" />


    <fragment
        android:id="@+id/nav_pazar"
        android:name="com.example.dostava.ui.pazar.PazarFragment"
        android:label="@string/menu_pazar"
        tools:layout="@layout/pazar_fragment" />

    <fragment
        android:id="@+id/nav_maxP"
        android:name="com.example.dostava.ui.max.MaxFragment"
        android:label="@string/menu_maxP"
        tools:layout="@layout/max_fragment" />


    <fragment
        android:id="@+id/nav_obrisiL"
        android:name="com.example.dostava.ui.send.SendFragment"
        android:label="@string/menu_obrisiL"
        tools:layout="@layout/fragment_send" />
</navigation>